package common

// all the type constants.
const (
	//Proto Type Base
	BASE = "healum.com/proto/"

	ACCOUNT_TYPE      = "go.micro.srv.account.Account"
	USER_TYPE         = "go.micro.srv.user.User"
	TRACK_TYPE        = "go.micro.srv.track.Track"
	TODO_TYPE         = "go.micro.srv.todo.Todo"
	ORGANISATION_TYPE = "go.micro.srv.organisation.Organisation"
	NOTE_TYPE         = "go.micro.srv.note.Note"
	PRODUCT_TYPE      = "go.micro.srv.product.Product"
	RESPONSE_TYPE     = "go.micro.srv.response.Response"
	TASK_TYPE         = "go.micro.srv.task.Task"
	TEAM_TYPE         = "go.micro.srv.team.Team"

	// Content
	CONTENT_TYPE           = "go.micro.srv.content.Content"
	CONTENT_ACTIVITY_TYPE  = "go.micro.srv.content.Activity"
	CONTENT_RECIPE_TYPE    = "go.micro.srv.content.Recipe"
	CONTENT_EXERCISE_TYPE  = "go.micro.srv.content.Exercise"
	CONTENT_ARTICLE_TYPE   = "go.micro.srv.content.Article"
	CONTENT_PLACE_TYPE     = "go.micro.srv.content.Place"
	CONTENT_WELLBEING_TYPE = "go.micro.srv.content.Wellbeing"
	CONTENT_VIDEO_TYPE     = "go.micro.srv.content.Video"
	CONTENT_PRODUCT_TYPE   = "go.micro.srv.content.Product"
	CONTENT_SERVICE_TYPE   = "go.micro.srv.content.Service"
	CONTENT_EVENT_TYPE     = "go.micro.srv.content.Event"
	CONTENT_RESEARCH_TYPE  = "go.micro.srv.content.Research"
	CONTENT_CONDITION_TYPE = "go.micro.srv.content.Condition"
	CONTENT_FOOD_TYPE      = "go.micro.srv.content.Food"
	CONTENT_DIET_TYPE      = "go.micro.srv.content.Diet"
	CONTENT_ALLERGY_TYPE   = "go.micro.srv.content.Allergy"
	CONTENT_CUISINE_TYPE   = "go.micro.srv.content.Cuisine"
	CONTENT_APP_TYPE       = "go.micro.srv.static.App"

	// Plan
	PLAN_TYPE = "go.micro.srv.plan.Plan"

	// Survey
	SURVEY_TYPE   = "go.micro.srv.survey.Survey"
	QUESTION_TYPE = "go.micro.srv.survey.Question"
	// Survey-Field
	TEXTQUESTIONFIELD_TYPE           = "go.micro.srv.survey.TextQuestionField"
	MULTIPLECHOICEQUESTIONFIELD_TYPE = "go.micro.srv.survey.MultipleChoiceQuestionField"
	CONTACTQUESTIONFIELD_TYPE        = "go.micro.srv.survey.ContactQuestionField"
	LEGALQUESTIONFIELD_TYPE          = "go.micro.srv.survey.LegalQuestionField"
	DROPDOWNQUESTIONFIELD_TYPE       = "go.micro.srv.survey.DropdownQuestionField"
	FIELDQUESTIONFIELD_TYPE          = "go.micro.srv.survey.FileQuestionField"
	BINARYQUESTIONFIELD_TYPE         = "go.micro.srv.survey.BinaryQuestionField"
	RANGESELECTQUESTION_TYPE         = "go.micro.srv.survey.RangeSelectQuestionField"
	// Survey-Settings
	TEXTQUESTIONSETTINGS_TYPE           = "go.micro.srv.survey.TextQuestionSettings"
	MULTIPLECHOICEQUESTIONSETTINGS_TYPE = "go.micro.srv.survey.MultipleChoiceQuestionSettings"
	CONTACTQUESTIONSETTINGS_TYPE        = "go.micro.srv.survey.ContactQuestionSettings"
	LEGALQUESTIONSETTINGS_TYPE          = "go.micro.srv.survey.LegalQuestionSettings"
	DROPDOWNQUESTIONSETTINGS_TYPE       = "go.micro.srv.survey.DropdownQuestionSettings"
	FIELDQUESTIONSETTINGS_TYPE          = "go.micro.srv.survey.FileQuestionSettings"
	BINARYQUESTIONSETTINGS_TYPE         = "go.micro.srv.survey.BinaryQuestionSettings"
	RANGESELECTQUESTIONSETTINGS_TYPE    = "go.micro.srv.survey.RangeSelectQuestionSettings"

	// Behaviour
	GOAL_TYPE      = "go.micro.srv.behaviour.Goal"
	CHALLENGE_TYPE = "go.micro.srv.behaviour.Challenge"
	HABIT_TYPE     = "go.micro.srv.behaviour.Habit"
)
